*SVN*

* Fix DoubleRenderError message and leave out mention of returning false from filters.  Closes #10380 [fcheung]

* Clean up some cruft around ActionController::Base#head.  Closes #10417 [ssoroka]

*2.0.1* (December 7th, 2007)

* Fixed send_file/binary_content for testing #8044 [tolsen]

* When a NonInferrableControllerError is raised, make the proposed fix clearer in the error message. Closes #10199 [danger]

* Update Prototype to 1.6.0.1.  [sam]

* Update script.aculo.us to 1.8.0.1.  [madrobby]

* Add 'disabled' attribute to <OPTION> separators used in time zone and country selects.  Closes #10354 [hasmanyjosh]

* Added the same record identification guessing rules to fields_for as form_for has [DHH]

* Fixed that verification violations with no specified action didn't halt the chain (now they do with a 400 Bad Request) [DHH]

* Raise UnknownHttpMethod exception for unknown HTTP methods. Closes #10303 [tarmo]

* Update to Prototype -r8232.  [sam]

* Make sure the optimisation code for routes doesn't get used if :host, :anchor or :port are provided in the hash arguments. [pager, Koz] #10292

* Added protection from trailing slashes on page caching #10229 [devrieda]

* Asset timestamps are appended, not prepended. Closes #10276 [mnaberez]

* Minor inconsistency in description of render example. Closes #10029 [ScottSchram]

* Add #prepend_view_path and #append_view_path instance methods on ActionController::Base for consistency with the class methods.  [rick]

* Refactor sanitizer helpers into HTML classes and make it easy to swap them out with custom implementations.  Closes #10129.  [rick]

* Add deprecation for old subtemplate syntax for ActionMailer templates, use render :partial [rick]

* Fix TemplateError so it doesn't bomb on exceptions while running tests [rick]

* Fixed that named routes living under resources shouldn't have double slashes #10198 [isaacfeliu]

* Make sure that cookie sessions use a secret that is at least 30 chars in length. [Koz]
