@@ -1,0 +1,13 @@
+module ActionView
+  class TemplateHandler
+    def initialize(view)
+      @view = view
+    end
+
+    def render(template, local_assigns)
+    end
+
+    def compile(template)
+    end
+  end
+end
