@@ -1,5 +1,7 @@
 *SVN*
 
+* Refactor Action View template handlers.  #10437 [Josh Peek]
+
 * Fix DoubleRenderError message and leave out mention of returning false from filters.  Closes #10380 [fcheung]
 
 * Clean up some cruft around ActionController::Base#head.  Closes #10417 [ssoroka]
